--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.2",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
