--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "node_express_api",
+  "name": "diary_web_api",
   "version": "1.0.0",
-  "description": "template",
-  "main": "index.js",
+  "description": "다이어리 웹 API",
+  "main": "server.js",
   "scripts": {
+    "createDB": "sequelize db:create --env development",
     "start": "NODE_ENV=production node server.js",
     "dev": "NODE_ENV=development nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "git pull && push": "git pull origin Dev1 && git add . && git commit -am 'updated' && git push"
   },
   "author": "corner",
   "license": "ISC",
@@ -16,10 +18,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.2"
+    "sequelize": "^6.19.2",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   }
 }
