--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "diary_web_api",
+  "name": "project_web_api",
   "version": "1.0.0",
-  "description": "다이어리 웹 API",
+  "description": "프로젝트 웹 API",
   "main": "server.js",
   "scripts": {
     "createDB": "sequelize db:create --env development",
